--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>sign up</title>
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1><center>SIGN UP FORM</center></h1>
